# oculomatic-deprecated

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  eye_tracker_config.h  installation.md  oculomatic  oculomatic.cpp
cmake/: FindComedi.cmake  FindTBB.cmake
lib/: CMakeLists.txt  ConicSection.h  Makefile  PupilTracker.cpp  PupilTracker.h  cmake_install.cmake  cvx.cpp  cvx.h  timer.h  utils.cpp  utils.h
